Migrate generate API to array values